# healf-max

./: .env.example  .gitignore  README.md  REASONING.md  pyproject.toml  uv.toml
data/: bloods_demo_expected_plan.yaml  synthetic_bloods_results.yaml  synthetic_customer_profile.yaml  wearable_context.yaml
docs/specs/: 0001-retrieval-lanes-and-safety-evals.md
evals/safety/: cases.yaml  thresholds.yaml
healf_max/: __init__.py  cli.py  config.py  llm.py  prompts.py
healf_max/demo/: bloods.py  wearable.py
healf_max/domain/: models.py  planner.py  recommendations.py
healf_max/evals/: __init__.py  metrics.py  safety.py
healf_max/kb/: __init__.py  graph.py  index.py  loader.py  parser.py  schemas.py  search.py  validator.py
healf_max/tools/: __init__.py  bloods.py  customer.py  knowledge.py  registry.py
kb/: LLM.md  README.md
kb/_schemas/: biomarker.schema.md  brand_signal.schema.md  editorial_signal.schema.md  evidence_claim.schema.md  product.schema.md  product_category.schema.md  tone_pattern.schema.md  trust_signal.schema.md  wearable_signal.schema.md  wellbeing_moment.schema.md
kb/biomarkers/: b12.md  ferritin.md  hs_crp.md  magnesium.md  omega_3_index.md  vitamin_d.md
kb/brand/: context_pack.md  quiz.md  story.md  topics.md  zone.md
kb/editorial/: anti_optimisation.md  biology_has_answers.md  boring_wins.md  hyrox_recovery_guide.md  (+5 more)
tests/: test_bloods_demo.py  test_cli_smoke.py  test_hybrid_graph_retrieval.py  test_kb_step02.py  test_kb_validation.py  test_product_catalogue_ingest.py  test_retrieval.py  test_safety.py  test_safety_eval.py
(+97 files in other folders)
